--- a/css/layout.css
+++ b/css/layout.css
@@ -12,3 +12,19 @@ body {
     width: 350px;
     border-radius: 10px;
 }
+
+.calc-display {
+    padding-left: 5px;
+    margin-bottom: 20px;
+}
+
+.calc-display p {
+    width: 100%;
+    font-size: 3.5rem;
+    text-align: end;
+    background-color: transparent;
+    color: rgb(255, 255, 255);
+    border: none;
+    outline: none;
+    word-break: break-all;
+}
