--- a/css/layout.css
+++ b/css/layout.css
@@ -1,13 +1,13 @@
 body {
     background-color: rgb(47, 163, 86);
-    min-height: 50vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .calc {
-    background-color: rgb(165, 42, 42);
+    background-color: rgb(0, 0, 0);
     padding: 25px;
     width: 350px;
     border-radius: 10px;
@@ -27,4 +27,41 @@ body {
     border: none;
     outline: none;
     word-break: break-all;
+}
+
+button {
+    background: #e5e920;
+    font-size: 1.5rem;
+    border: none;
+    border-radius: 70%;
+    cursor: pointer;
+    height: 65px;
+    width: 65px;
+}
+
+button:active,
+button:focus {
+    filter: brightness(120%);
+}
+
+.calc-keys {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-row-gap: 15px;
+    grid-column-gap: 10px;
+}
+
+.zero {
+    grid-column: span 2;
+    width: 100%;
+    border-radius: 30px;
+}
+
+.operations {
+    background: rgb(177, 7, 21);
+    color: rgb(255, 255, 255);
+}
+
+.other {
+    background: rgb(236, 215, 215);
 }
