--- a/css/layout.css
+++ b/css/layout.css
@@ -15,16 +15,17 @@ body {
 
 .calc-display {
     padding-left: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .calc-display p {
     width: 100%;
     font-size: 3.5rem;
     text-align: end;
-    background-color: transparent;
-    color: rgb(255, 255, 255);
+    background-color: rgb(236, 215, 215);
+    color: rgb(0, 0, 0);
     border: none;
+    border-radius: 0.1em;
     outline: none;
     word-break: break-all;
 }
@@ -60,6 +61,10 @@ button:focus {
 .operations {
     background: rgb(177, 7, 21);
     color: rgb(255, 255, 255);
+}
+
+.equal {
+    background: rgb(39, 23, 185);
 }
 
 .other {
