--- a/css/layout.css
+++ b/css/layout.css
@@ -18,7 +18,7 @@ body {
     margin-bottom: 30px;
 }
 
-#input-output {
+#resultDisplay {
     width: 100%;
     font-size: 3.5rem;
     text-align: end;
@@ -30,7 +30,7 @@ body {
     word-break: break-all;
 }
 
-#display-result {
+#subsidiaryDisplay {
     width: 100%;
     font-size: 2.5rem;
     text-align: end;
