--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,7 @@
+$lightColor
+
 body {
-    background-color: rgb(47, 163, 86);
+    background-color: #021526c7;
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -7,7 +9,7 @@ body {
 }
 
 .calc {
-    background-color: rgb(0, 0, 0);
+    background-color: #448cc4;
     padding: 25px;
     width: 350px;
     border-radius: 10px;
@@ -22,7 +24,7 @@ body {
     width: 100%;
     font-size: 3.5rem;
     text-align: end;
-    background-color: rgb(236, 215, 215);
+    background-color: #E2E2B6;
     color: rgb(0, 0, 0);
     border: none;
     border-radius: 0 0 0.1em 0.1em;
@@ -34,8 +36,8 @@ body {
     width: 100%;
     font-size: 2.5rem;
     text-align: end;
-    background-color: rgb(236, 215, 215);
-    color: rgb(0, 0, 0);
+    background-color: #E2E2B6;
+    color: #000000;
     border: none;
     border-radius: 0.1em 0.1em 0 0;
     outline: none;
@@ -43,7 +45,8 @@ body {
 }
 
 button {
-    background: #e5e920;
+    background: #E2E2B6;
+    color: #000000;
     font-size: 1.5rem;
     border: none;
     border-radius: 70%;
@@ -65,15 +68,16 @@ button:focus {
 }
 
 .operations {
-    background: rgb(177, 7, 21);
-    color: rgb(255, 255, 255);
+    background: #021526;
+    color: #E2E2B6;
 }
 
 .equal {
-    background: rgb(39, 23, 185);
-    color: rgb(255, 255, 255);
+    background: #021526;
+    color: #E2E2B6;
 }
 
 .other {
-    background: rgb(236, 215, 215);
+    background: #021526;
+    color: #E2E2B6;
 }
